--- a/dllReparto/dllReparto/dllReparto.vbproj
+++ b/dllReparto/dllReparto/dllReparto.vbproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6611912E-35A2-4E38-9A83-07936CB595E2}</ProjectGuid>
+    <ProjectGuid>{BBF002B7-5716-4ADD-9FE2-270396E72B89}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>dllCatalogos</RootNamespace>
-    <AssemblyName>dllCatalogos</AssemblyName>
+    <RootNamespace>dllReparto</RootNamespace>
+    <AssemblyName>dllReparto</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Windows</MyType>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -19,7 +19,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>dllCatalogos.xml</DocumentationFile>
+    <DocumentationFile>dllReparto.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -28,7 +28,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>dllCatalogos.xml</DocumentationFile>
+    <DocumentationFile>dllReparto.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
@@ -46,18 +46,13 @@
   <ItemGroup>
     <Reference Include="DevExpress.Data.Desktop.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Data.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
-    <Reference Include="DevExpress.Dialogs.v20.1.Core, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Printing.v20.1.Core, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Utils.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
-    <Reference Include="DevExpress.XtraBars.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
-    <Reference Include="DevExpress.XtraDialogs.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraEditors.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraGrid.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraLayout.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraPrinting.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-    <Reference Include="DevExpress.XtraTreeList.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
@@ -79,24 +74,17 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Formularios\frmEmpleados.Designer.vb">
-      <DependentUpon>frmEmpleados.vb</DependentUpon>
+    <Compile Include="CatTipoPrecio.vb" />
+    <Compile Include="frmReparto.Designer.vb">
+      <DependentUpon>frmReparto.vb</DependentUpon>
     </Compile>
-    <Compile Include="Formularios\frmEmpleados.vb">
+    <Compile Include="frmReparto.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Formularios\frmNuevoEmpleado.Designer.vb">
-      <DependentUpon>frmNuevoEmpleado.vb</DependentUpon>
-    </Compile>
-    <Compile Include="Formularios\frmNuevoEmpleado.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Modulos\General.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
       <DependentUpon>Application.myapp</DependentUpon>
-      <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="My Project\Resources.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -110,11 +98,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Formularios\frmEmpleados.resx">
-      <DependentUpon>frmEmpleados.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Formularios\frmNuevoEmpleado.resx">
-      <DependentUpon>frmNuevoEmpleado.vb</DependentUpon>
+    <EmbeddedResource Include="frmReparto.resx">
+      <DependentUpon>frmReparto.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\licenses.licx" />
     <EmbeddedResource Include="My Project\Resources.resx">
@@ -136,7 +121,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\dllMsSQL\dllMsSQL.vbproj">
+    <ProjectReference Include="..\..\dllMsSQL\dllMsSQL.vbproj">
       <Project>{d2d2b388-3dc2-4cbb-a7fb-282f74815341}</Project>
       <Name>dllMsSQL</Name>
     </ProjectReference>
